+header+nav+promo+features

--- a/src/css/partials/abstracts/_variables.scss
+++ b/src/css/partials/abstracts/_variables.scss
@@ -77,7 +77,7 @@ $error-bg:                    lighten($error, 30%);
 
 // Colors in use
 
-$body-bg:                     $white;
+$body-bg:                     #666e70;
 $text-color:                  $black;
 
 // $link-color:                  $grey;
