--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,4 +1,7 @@
 extends partials/templates/template.pug
 
 block content
+    include partials/components/stripe--contact.pug
+    include partials/components/promo.pug
+    include partials/components/features.pug
 
