--- a/src/css/partials/abstracts/mixins/_grid.scss
+++ b/src/css/partials/abstracts/mixins/_grid.scss
@@ -5,8 +5,8 @@
 @mixin make-container($gutter: $grid-gutter-width) {
   margin-left: auto;
   margin-right: auto;
-  // padding-left:  ($gutter / 2);
-  // padding-right: ($gutter / 2);
+  padding-left:  ($gutter / 2);
+  padding-right: ($gutter / 2);
   @if not $enable-flex {
     @include clearfix();
   }
@@ -21,15 +21,6 @@
     }
   }
 }
-
-
-/* Not in use in this project */
-
-
-
-
-
-
 
 @mixin make-row($gutter: $grid-gutter-width) {
   @if $enable-flex {
