--- a/src/html/partials/components/_head.pug
+++ b/src/html/partials/components/_head.pug
@@ -51,4 +51,5 @@ head
   link(rel='stylesheet', href='css/style.min.css')
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
+  script(src="https://use.fontawesome.com/b8dc28bd9a.js")
 
