--- a/src/html/partials/templates/template.pug
+++ b/src/html/partials/templates/template.pug
@@ -10,11 +10,12 @@ html(lang='ru', prefix='og: http://ogp.me/ns#')
   body
 
     include ../components/header.pug
+    include ../components/nav.pug
 
     main
       block content
 
     include ../components/footer.pug
-    
+
     script(src='js/script.min.js')
 
