--- a/src/css/partials/abstracts/_variables.scss
+++ b/src/css/partials/abstracts/_variables.scss
@@ -67,7 +67,7 @@ $black:                       #000000;
 
 $blue:                        #32bfc0;
 $yellow:                      #ffc952;
-$grey:                        #7e7e7e;
+$grey:                        #21242b;
 $grey-border:                 #dadada;
 
 $success:                     #5cb85c;
