--- a/src/html/partials/components/footer.pug
+++ b/src/html/partials/components/footer.pug
@@ -1,5 +1,56 @@
 include ../abstracts/bemto/bemto.pug
 
 // Footer
++b.FOOTER.footer
+  .container
+    .row.row-border
+      .col-xs-12.col-lg-3
+        +e.H2.title Новый слоган. Гип-гип ура =)
+      .col-xs-12.col-md-4.col-lg-3
+        +e.H3.subtitle Последние новости
+        +e.A.news(href="#") Новость 1
+        +e.P.time 25.03.2016
+        +e.A.news(href="#") Seafield logistics goes into administration
+        +e.P.time 25.03.2016
+      .col-xs-12.col-md-4.col-lg-3
+        +e.H3.subtitle Информация
+        .row
+          .col-xs-6
+            +e.A.link(href="#") Главная
+            +e.A.link(href="#") Услуги
+            +e.A.link(href="#") Контакты
+          .col-xs-6
+            +e.A.link(href="#") Комания
+            +e.A.link(href="#") Новости
+      .col-xs-12.col-md-4.col-lg-3
+        +e.H3.subtitle Контакты
+        +e.P.adress Улица Лермонтова, Москва, 154234
+        +e.A.phone(href="tel:") +7 921 234-23-23
+        +e.A.mail(href="mail:") manager@gmail.com
+        +e.A.phone(href="tel:") +7 911 678-34-34
+        +e.A.mail(href="mail:") support@gmal.com
+  .container
+    +b.footer-copyright
+      +e.inner
+        +e.P.copyright Copyright © 2016 Наш копирайт
+          A(href="#") Linethemes.
+      +e.inner
+        +e.socials
+        +e.UL.list
+          +e.LI.socials-item
+            a(href="twitter.com" target="_blank")
+              i.fa.fa-twitter
+          +e.LI.socials-item
+            a(href="facbook.com" target="_blank")
+              i.fa.fa-facebook-official
+          +e.LI.socials-item
+            a(href="instagram.com" target="_blank")
+              i.fa.fa-instagram
+          +e.LI.socials-item
+            a(href="ru.linkedin.com" target="_blank")
+              i.fa.fa-linkedin
+          +e.LI.socials-item
+            a(href="vk.com" target="_blank")
+              i.fa.fa-vk
 
 
