--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -26,6 +26,7 @@
 @import "partials/components/stripe";
 @import "partials/components/promo";
 @import "partials/components/promo-slider";
+@import "partials/components/reviews";
 
 // Components
 
