--- a/src/html/partials/abstracts/mixins/_reviews-item.pug
+++ b/src/html/partials/abstracts/mixins/_reviews-item.pug
@@ -1,7 +1,7 @@
 mixin reviewsItem(img,name,text)
   +b.reviews
-    +b.contant
-      +b.img
+    +e.contant
+      +e.img
         img(src= "img/" + img alt)
       +e.H3.name #{name}
       +e.P.text #{text}
