--- a/src/css/partials/components/promo.scss
+++ b/src/css/partials/components/promo.scss
@@ -1,36 +1,113 @@
 .promo {
   background-image: url(../img/bg-page-title.png);
 
+  &__box {
+    margin: 35px 3px;
+    position: relative;
+    box-sizing: border-box;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    transition: all ease-in-out .5s;
+  }
+
+  &__img {
+    height: auto;
+    max-width: 100%;
+    vertical-align: top;
+  }
+
   &__item {
-    margin: 35px 10px;
     overflow: hidden;
     position: relative;
   }
 
-  &__img {
-    display: block;
-    width: 300px;
-    height: 100%;
-    @include mq($from:xs, $until:sm){
-      width: 300px;
-    }
-    img{
-      width: 100%;
-      height: 100%;
-      display: block;
-      object-fit: cover;
-    }
+  &__header {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    padding: 30px;
+    background: linear-gradient(to bottom, transparent 0, rgba(0, 0, 0, 0.7) 100%) repeat-x;
+    transform: translateX(0);
   }
 
-  &__item:nth-child(1) {
-    .promo_title {
-      top: 60px;
-    }
+  &__contant {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 30px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    visibility: hidden;
+    transform: translateX(-100%);
+    opacity: 0;
   }
 
   &__title {
     position: absolute;
-    left: 25px;
-    top: 160px;
+    bottom: 40px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+
+    &:after {
+    width: 50px;
+    height: 3px;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -10px;
+    color: $blue;
+    z-index: 100;
+    }
   }
+
+  &__subtitle {
+    position: absolute;
+    bottom: 10px;
+    color: #fff;
+
+    &:before {
+    font-family: "FontAwesome";
+    content: "\f0a9";
+    display: inline-block;
+    margin: 0 6px 0 0;
+    }
+  }
+
+  &__text {
+    font-size: 15px;
+    line-height: 1.8;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
+  &__btn {
+    color: #fff;
+    font-weight: bold;
+    padding: 10px 40px 10px 20px;
+    text-transform: uppercase;
+    position: relative;
+    background-color: $yellow;
+  }
+}
+
+.promo__box:hover .promo__contant  {
+   -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    visibility: visible;
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    opacity: 1;
+}
+
+.promo__box:hover .promo__header {
+  transform: translateX(100%);
 }
