--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -27,6 +27,9 @@
 @import "partials/components/promo";
 @import "partials/components/promo-slider";
 @import "partials/components/reviews";
+@import "partials/components/features";
+@import "partials/components/interactive";
+@import "partials/components/news";
 
 // Components
 
