--- a/src/html/partials/components/features.pug
+++ b/src/html/partials/components/features.pug
@@ -3,12 +3,14 @@ include ../abstracts/bemto/bemto.pug
 //Features
 +b.SECTION.features
   .container
-    +e.H2.title Что мы предлагаем.
+    +e.H2.title Что мы
+       span предлагаем.
     .row
       .col-xs-12.col-md-6.col-lg-4
         +e.item
           .row
             .col-xs-2
+              +e.box
               i.fa.fa-battery-full
             .col-xs-10
               +e.H3.sub-title Предложение 1
@@ -17,6 +19,7 @@ include ../abstracts/bemto/bemto.pug
         +e.item
           .row
             .col-xs-2
+              +e.box
               i.fa.fa-truck
             .col-xs-10
               +e.H3.sub-title Предложение 2
@@ -25,6 +28,7 @@ include ../abstracts/bemto/bemto.pug
         +e.item
           .row
             .col-xs-2
+              +e.box
               i.fa.fa-cube
             .col-xs-10
               +e.H3.sub-title Предложение 3
@@ -33,6 +37,7 @@ include ../abstracts/bemto/bemto.pug
         +e.item
           .row
             .col-xs-2
+              +e.box
               i.fa.fa-mail-forward
             .col-xs-10
               +e.H3.sub-title Предложение 4
@@ -41,6 +46,7 @@ include ../abstracts/bemto/bemto.pug
         +e.item
           .row
             .col-xs-2
+              +e.box
               i.fa.fa-plane
             .col-xs-10
               +e.H3.sub-title Предложение 5
@@ -49,6 +55,7 @@ include ../abstracts/bemto/bemto.pug
         +e.item
           .row
             .col-xs-2
+              +e.box
               i.fa.fa-globe
             .col-xs-10
               +e.H3.sub-title Предложение 6
