--- a/src/css/partials/components/promo.scss
+++ b/src/css/partials/components/promo.scss
@@ -6,7 +6,7 @@
     position: relative;
     box-sizing: border-box;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-    transition: all ease-in-out .5s;
+    transition: .5s;
   }
 
   &__img {
@@ -29,6 +29,7 @@
     padding: 30px;
     background: linear-gradient(to bottom, transparent 0, rgba(0, 0, 0, 0.7) 100%) repeat-x;
     transform: translateX(0);
+    transition: 0.3;
   }
 
   &__contant {
@@ -44,6 +45,7 @@
     visibility: hidden;
     transform: translateX(-100%);
     opacity: 0;
+    transition: 0.3;
   }
 
   &__title {
@@ -60,7 +62,7 @@
     position: absolute;
     left: 0;
     top: -10px;
-    color: $blue;
+    background-color: $blue;
     z-index: 100;
     }
   }
@@ -106,8 +108,10 @@
     -khtml-opacity: 1;
     -moz-opacity: 1;
     opacity: 1;
+    transition: 0.3;
 }
 
 .promo__box:hover .promo__header {
   transform: translateX(100%);
+  transition: 0.3;
 }
