+forms, fix haeader, try to fix map

--- a/src/css/partials/abstracts/_png-sprite.scss
+++ b/src/css/partials/abstracts/_png-sprite.scss
@@ -77,32 +77,21 @@ $s-logo6-total-width: 320px;
 $s-logo6-total-height: 225px;
 $s-logo6-image: '../img/png-sprite.png';
 $s-logo6: (120px, 150px, -120px, -150px, 120px, 75px, 320px, 225px, '../img/png-sprite.png', 's-logo6', );
-$s-map-marker-1-name: 's-map-marker-1';
-$s-map-marker-1-x: 240px;
-$s-map-marker-1-y: 0px;
-$s-map-marker-1-offset-x: -240px;
-$s-map-marker-1-offset-y: 0px;
-$s-map-marker-1-width: 80px;
-$s-map-marker-1-height: 88px;
-$s-map-marker-1-total-width: 320px;
-$s-map-marker-1-total-height: 225px;
-$s-map-marker-1-image: '../img/png-sprite.png';
-$s-map-marker-1: (240px, 0px, -240px, 0px, 80px, 88px, 320px, 225px, '../img/png-sprite.png', 's-map-marker-1', );
 $s-star-name: 's-star';
 $s-star-x: 240px;
-$s-star-y: 88px;
+$s-star-y: 0px;
 $s-star-offset-x: -240px;
-$s-star-offset-y: -88px;
+$s-star-offset-y: 0px;
 $s-star-width: 80px;
 $s-star-height: 16px;
 $s-star-total-width: 320px;
 $s-star-total-height: 225px;
 $s-star-image: '../img/png-sprite.png';
-$s-star: (240px, 88px, -240px, -88px, 80px, 16px, 320px, 225px, '../img/png-sprite.png', 's-star', );
+$s-star: (240px, 0px, -240px, 0px, 80px, 16px, 320px, 225px, '../img/png-sprite.png', 's-star', );
 $spritesheet-width: 320px;
 $spritesheet-height: 225px;
 $spritesheet-image: '../img/png-sprite.png';
-$spritesheet-sprites: ($s-logo1, $s-logo2, $s-logo3, $s-logo4, $s-logo5, $s-logo6, $s-map-marker-1, $s-star, );
+$spritesheet-sprites: ($s-logo1, $s-logo2, $s-logo3, $s-logo4, $s-logo5, $s-logo6, $s-star, );
 $spritesheet: (320px, 225px, '../img/png-sprite.png', $spritesheet-sprites, );
 
 /*
