--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -30,6 +30,9 @@
 @import "partials/components/features";
 @import "partials/components/interactive";
 @import "partials/components/news";
+@import "partials/components/form-inner";
+@import "partials/components/form";
+@import "partials/components/form-states";
 
 // Components
 
