--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -10,4 +10,5 @@ block content
     include partials/components/news.pug
     include partials/components/reviews.pug
     include partials/components/stripe--logo.pug
+    include partials/components/map.pug
 
