--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -15,19 +15,26 @@ include ../abstracts/bemto/bemto.pug
             a(href="#") Компания
             +e.UL.sub-menu
               li
-                a О компании
+                a(href="#") О компании
               li
-                a История компании
+                a(href="#")  История компании
               li
-                a Для вас работают
+                a(href="#")  Для вас работают
               li
-                a Партнеры
+                a(href="#")  Партнеры
               li
-                a FAQ
+                a(href="#")  FAQ
               li
-                a Отзывы
+                a(href="#")  Отзывы
           +e.LI.item
             a(href="#") Услуги
+            +e.UL.sub-menu
+              li
+                a(href="#")  Сертификация
+              li
+                a(href="#")  Разработка технической документации
+              li
+                a(href="#")  Роспотребнадзор
           +e.LI.item
             a(href="#") Новости
           +e.LI.item
