--- a/src/html/partials/abstracts/mixins/_form.pug
+++ b/src/html/partials/abstracts/mixins/_form.pug
@@ -1,68 +1,109 @@
-- var application = [{name: 'application', id: 'formApplication', title : 'Заказать документ', application: true, button: 'Заказать документ', success: 'Ваша заявка отправлена'}] 
-- var question = [{name: 'question', id: 'formQuestion', title : 'Задать вопрос', question: true,  button: 'Спросить', success: 'Ваш вопрос отправлен'}] 
-- var call = [{name: 'call', id: 'formCall', title : 'Заказать звонок', call: true, button: 'Заказать звонок', success: 'Ваша заявка отправлена'}] 
-- var review = [{name: 'review', id: 'formReview', title : 'Оставить отзыв', review: true, button: 'Оставить отзыв', success: 'Отзыв успешно оставлен'}] 
+- var application = [{name: 'application', id: 'formApplication', text : 'Fill out the form to get your quote within the hour. We guaranty safe and timley product delivery either for your personal travel or your products.', application: true, button: 'Заказать', success: 'Ваша заявка отправлена'}]
+- var question = [{name: 'question', id: 'formQuestion', title : 'Для получения бесплатной коснультации заполните форму', question: true,  button: 'Отправить', success: 'Ваш вопрос отправлен'}]
+- var call = [{name: 'call', id: 'formCall', title : 'Сэкономьте время!', text : 'Просто заполните форму', call: true, button: 'Заказать сертификат', success: 'Ваша заявка отправлена'}]
+- var review = [{name: 'review', id: 'formReview', title : 'Оставить отзыв', review: true, button: 'Оставить отзыв', success: 'Отзыв успешно оставлен'}]
+- var questionheader = [{name: 'questionheader', id: 'formQuestionheader', title : 'Просто задайте свой вопрос заполнив форму ниже', questionheader: true, button: 'Спросить', success: 'Ваш вопрос отправлен'}]
 
 
 mixin form(items)
   each item in items
     +b.SECTION(class= 'form--' + item.name)
-      form(action='', method='', id= item.id)
-        //- +e.A.close(href='#') Закрыть
-        //- +e.H3.title #{item.title}
+      +e.H3.title #{item.title}
+      +e.P.text #{item.text}
+      +e.FORM.form(action='', method='', id= item.id)
 
         if item.application
-          .form-group.field-question-production.required
-            +e.INPUT.input(type='text', name='Продукция', placeholder='Наименование продукции*') 
-            p.help-block.help-block-error Ошибка заполнения поля формы
-          .form-group.field-question-name.required.has-error
-            +e.INPUT.input(type='text', name='Имя', placeholder='Ваше имя*')
-            p.help-block.help-block-error Ошибка заполнения поля формы
-          .form-group.field-question-email.required.has-success
-            +e.INPUT.input(type='email', name='Email', placeholder='Ваш e-mail*')
-            p.help-block.help-block-error Ошибка заполнения поля формы
-          .form-group.field-question-phone
-            +e.INPUT.input(type='tel', name='Телефон', placeholder='Контактный телефон')
-            p.help-block.help-block-error Ошибка заполнения поля формы            
-
-        if item.question
-          .form-group.field-question-name.required.has-error
-            +e.INPUT.input(type='text', name='Имя', placeholder='Ваше имя*')
-            p.help-block.help-block-error Ошибка заполнения поля формы
-          .form-group.field-question-email.required.has-success
-            +e.INPUT.input(type='email', name='Email', placeholder='Ваш e-mail*')
+          .form-group.required
+            +e.INPUT.input(type='text', name='Имя', placeholder='Ваше имя:')
             p.help-block.help-block-error Ошибка заполнения поля формы
           .form-group.required
-            +e.TEXTAREA.textarea(type='text', name='Ваш вопрос', placeholder='Ваш вопрос*')
+            +e.INPUT.input(type='text', name='Продукция', placeholder='Наименование продукции:*')
             p.help-block.help-block-error Ошибка заполнения поля формы
+          .form-group.required
+            +e.INPUT.input(type='email', name='Email', placeholder='Ваш e-mail:*')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+          .form-group
+            +e.INPUT.input(type='tel', name='Телефон', placeholder='Контактный телефон:')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+
+        if item.question
+          .form-group.required
+            +e.INPUT.input(type='text', name='Продукция', placeholder='Ваше имя')
+            p.help-block.help-block-error Ошибка
+          .form-group.required
+            +e.INPUT.input(type='tel', name='Email', placeholder='Ваш телефон')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+
 
         if item.call
-          .form-group.field-question-name.required.has-error
-            +e.INPUT.input(type='text', name='Имя', placeholder='Ваше имя*')
+          .form-group.required.has-success
+            +e.INPUT.input(type='text', name='Продукция', placeholder='Наименование продукции:*')
             p.help-block.help-block-error Ошибка заполнения поля формы
-          .form-group.field-question-phone.required.has-success
-            +e.INPUT.input(type='tel', name='Телефон', placeholder='Контактный телефон*')
+          .form-group.required.has-error
+            +e.INPUT.input(type='text', name='Имя', placeholder='Ваше имя:')
             p.help-block.help-block-error Ошибка заполнения поля формы
-          //- .form-group.required
-          //-   +e.time
-          //-     +e.SPAN.time-text Желаемое время звонка c
-          //-     +e.INPUT.input--time(type='time', name='Звонить с') 
-          //-     +e.SPAN.time-text до
-          //-     +e.INPUT.input--time(type='time', name='Звонить до') 
-          //-   p.help-block.help-block-error Ошибка заполнения поля формы
+          .form-group.required
+            +e.INPUT.input(type='email', name='Email', placeholder='Ваш e-mail:*')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+          .form-group.required
+            +e.INPUT.input(type='tel', name='Телефон', placeholder='Контактный телефон:')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+
 
         if item.review
-          .form-group.field-question-name.required.has-error
+          .form-group.required
             +e.INPUT.input(type='text', name='Компания', placeholder='Ваша компания*')
             p.help-block.help-block-error Ошибка заполнения поля формы
-          .form-group.field-question-email.required.has-success
+          .form-group.required
             +e.INPUT.input(type='email', name='Email', placeholder='Контактный e-mail*')
             p.help-block.help-block-error Ошибка заполнения поля формы
           .form-group.required
             +e.TEXTAREA.textarea(type='text', name='Ваш отзыв', placeholder='Ваш отзыв*')
             p.help-block.help-block-error Ошибка заполнения поля формы
 
-        .form-group.recaptcha
-          +b.captcha
-        +b.BUTTON.btn--form(type='submit') #{item.button}
-        p.help-block.help-block-success #{item.success}
+
+        if item.questionheader
+          .form-group.required
+            +e.INPUT.input(type='text', name='Имя', placeholder='Ваше имя:')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+          .form-group.required
+            +e.INPUT.input(type='tel', name='Телефон', placeholder='Контактный телефон:')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+          .form-group.required
+            +e.INPUT.input(type='email', name='Email', placeholder='Контактный e-mail*')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+          .form-group.required
+            +e.TEXTAREA.textarea(type='text', name='Ваш вопрос', placeholder='Ваш вопрос*')
+            p.help-block.help-block-error Ошибка заполнения поля формы
+
+
+        if !item.review
+          .form-group.required
+            +e.SELECT.country-list
+              option Страна*
+              option Россия
+              option Беларусь
+              option Казахстан
+              option Украина
+              option Азербайджан
+              option Армения
+              option Грузия
+              option Молдавия
+          .form-group.required
+            +e.SELECT.region-list
+              option Регион:*
+              option Санкт-Петербург и Ленинградская область
+              option Москва и Московская область
+              option Новгородская область
+              option Псковская область
+              option Республика Карелия
+              option Мурманская область
+              option Калининградская область
+              option Вологодская область
+              option Тверская область
+        .form-group.required
+          +b.BUTTON.btn--form(type='submit') #{item.button}
+          p.help-block.help-block-success #{item.success}
+
+
+
