--- a/src/css/partials/components/features.scss
+++ b/src/css/partials/components/features.scss
@@ -26,6 +26,7 @@
     font-family: Roboto;
     font-weight: 700;
     font-style: normal;
+    padding-left: 15px;
   }
 
   &__text {
@@ -34,13 +35,18 @@
     font-family: Open Sans;
     font-style: normal;
     line-height: 1.8;
+    padding-left: 15px;
   }
 
   i {
     z-index: 100;
+    position: relative;
     &:before {
       font-size: 24px;
-      top: 20px;
+      position: absolute;
+      top: 25px;
+      left: 10px;
+      color: #fff;
     }
   }
 
@@ -52,7 +58,7 @@
     width: 50px;
     height: 50px;
     left: 10px;
-    top: 10px;
+    top: 30px;
     z-index: 1;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
