--- a/src/css/partials/components/nav.scss
+++ b/src/css/partials/components/nav.scss
@@ -42,6 +42,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
       display: inline-block;
       position: relative;
       transition: 0.5s;
+      cursor: pointer;
+      padding-bottom: 40px;
+      padding-top: 40px;
 
       a {
         color: $black;
@@ -56,6 +59,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
       display: flex;
       justify-content: space-between;
       padding-left: 0;
+      margin: 0;
       @include mq($from:xs, $until:md){
       flex-direction: column;
     }
@@ -105,5 +109,34 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     opacity: 1;
     visibility: visible;
     display: block;
-    top: 60px;
+    top: 101px;
+    cursor: pointer;
+}
+
+.totop {
+text-indent: -9999px;
+    width: 40px;
+    height: 40px;
+    outline: none;
+    position: fixed;
+    z-index: 99;
+    right: 25px;
+    bottom: 20px;
+    background: rgba(0, 0, 0, 0.7);
+    display: none;
+    transition: .3s;
+        border-radius: 2px;
+    &:hover  {
+      background-color: $blue;
+    }
+  &:after {
+    content: "\f077";
+    position: absolute;
+    color: #fff;
+    text-indent: 0;
+    font-family: 'FontAwesome';
+    left: 13px;
+    top: 8px;
+    font-size: 14px;
+  }
 }
