--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -33,6 +33,10 @@
 @import "partials/components/form-inner";
 @import "partials/components/form";
 @import "partials/components/form-states";
+@import "partials/components/pages-header";
+@import "partials/components/page-news";
+@import "partials/components/news-meta";
+
 
 // Components
 
