--- a/src/css/partials/components/news.scss
+++ b/src/css/partials/components/news.scss
@@ -41,6 +41,50 @@
     padding-left: 20px;
   }
 
+    &__img {
+    transition: 0.3s;
+    position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: 0.3s;
+    }
+    &:before {
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      margin: auto;
+      width: 70px;
+      height: 70px;
+      position: absolute;
+      content: '';
+      background-color: $blue;
+      border-radius: 3px;
+      opacity: 0;
+      transition: 0.3s;
+    }
+    &:after {
+    content: "\f054";
+    font-family: "fontAwesome";
+    color: #fff;
+    font-size: 28px;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      position: absolute;
+      top: 42%;
+     right: 46.5%;
+     opacity: 0;
+     transition: 0.3s;
+    }
+    &:hover {
+      background-color: #000;
+      img {
+        opacity: .3;
+      }
+    }
+  }
+
   &__date-inner {
     text-align: center;
     background-color: $yellow;
@@ -93,5 +137,12 @@
     .fa-folder-open {
       margin-left: 17px;
     }
+  }
+}
+
+.news__img:hover {
+  &:before,
+  &:after {
+    opacity: 1;
   }
 }
