--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -36,6 +36,7 @@
 @import "partials/components/pages-header";
 @import "partials/components/page-news";
 @import "partials/components/news-meta";
+@import "partials/components/contact";
 
 
 // Components
