--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -38,7 +38,7 @@ include ../abstracts/bemto/bemto.pug
           +e.LI.item
             a(href="news.html") Новости
           +e.LI.item
-            a(href="#") Контакты
+            a(href="contact.html") Контакты
           +e.LI.item
             +b.search
               +e.FORM.form
