--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -37,6 +37,7 @@
 @import "partials/components/page-news";
 @import "partials/components/news-meta";
 @import "partials/components/contact";
+@import "partials/components/page-about-us";
 
 
 // Components
