--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -12,10 +12,10 @@ include ../abstracts/bemto/bemto.pug
           +e.LI.item
             a(href="#") Главная
           +e.LI.item
-            +e.A.link(href="#") Компания
+            +e.A.link(href="about-us.html") Компания
             +e.UL.sub-menu
               li
-                a(href="#") О компании
+                a(href="about-us.html") О компании
               li
                 a(href="#")  История компании
               li
