--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -27,7 +27,7 @@ include ../abstracts/bemto/bemto.pug
               li
                 a(href="#")  Отзывы
           +e.LI.item
-            +e.A.link(href="#") Услуги
+            +e.A.link(href="services.html") Услуги
             +e.UL.sub-menu
               li
                 a(href="#")  Сертификация
