--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -38,6 +38,7 @@
 @import "partials/components/news-meta";
 @import "partials/components/contact";
 @import "partials/components/page-about-us";
+@import "partials/components/services";
 
 
 // Components
