--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -17,7 +17,7 @@ include ../abstracts/bemto/bemto.pug
               li
                 a(href="about-us.html") О компании
               li
-                a(href="#")  История компании
+                a(href="company-history.html")  История компании
               li
                 a(href="#")  Для вас работают
               li
