--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -39,7 +39,7 @@
 @import "partials/components/contact";
 @import "partials/components/page-about-us";
 @import "partials/components/services";
-
+@import "partials/components/history";
 
 // Components
 
