--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -40,6 +40,7 @@
 @import "partials/components/page-about-us";
 @import "partials/components/services";
 @import "partials/components/history";
+@import "partials/components/staff";
 
 // Components
 
