--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -19,7 +19,7 @@ include ../abstracts/bemto/bemto.pug
               li
                 a(href="company-history.html")  История компании
               li
-                a(href="#")  Для вас работают
+                a(href="staff.html")  Для вас работают
               li
                 a(href="#")  Партнеры
               li
