--- a/src/css/partials/components/news-meta.scss
+++ b/src/css/partials/components/news-meta.scss
@@ -6,7 +6,7 @@
     padding-left: 40px;
   @include mq($from:xs, $until:md){
     flex: 0 0 100%;
-    padding-right: .625rem;
+    padding-left: .625rem;
   }
 
   &__title {
