--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -21,7 +21,7 @@ include ../abstracts/bemto/bemto.pug
               li
                 a(href="staff.html")  Для вас работают
               li
-                a(href="#")  Партнеры
+                a(href="partners.html")  Партнеры
               li
                 a(href="#")  FAQ
               li
