--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -41,6 +41,7 @@
 @import "partials/components/services";
 @import "partials/components/history";
 @import "partials/components/staff";
+@import "partials/components/partners";
 
 // Components
 
