--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -42,6 +42,7 @@
 @import "partials/components/history";
 @import "partials/components/staff";
 @import "partials/components/partners";
+@import "partials/components/faq";
 
 // Components
 
