--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -23,7 +23,7 @@ include ../abstracts/bemto/bemto.pug
               li
                 a(href="partners.html")  Партнеры
               li
-                a(href="#")  FAQ
+                a(href="faq.html")  FAQ
               li
                 a(href="#")  Отзывы
           +e.LI.item
