--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -43,6 +43,7 @@
 @import "partials/components/staff";
 @import "partials/components/partners";
 @import "partials/components/faq";
+@import "partials/components/page-reviews";
 
 // Components
 
