--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -25,7 +25,7 @@ include ../abstracts/bemto/bemto.pug
               li
                 a(href="faq.html")  FAQ
               li
-                a(href="#")  Отзывы
+                a(href="reviews.html")  Отзывы
           +e.LI.item
             +e.A.link(href="services.html") Услуги
             +e.UL.sub-menu
