--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -44,6 +44,7 @@
 @import "partials/components/partners";
 @import "partials/components/faq";
 @import "partials/components/page-reviews";
+@import "partials/components/page";
 
 // Components
 
