--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -30,11 +30,11 @@ include ../abstracts/bemto/bemto.pug
             +e.A.link(href="services.html") Услуги
             +e.UL.sub-menu
               li
-                a(href="#")  Сертификация
+                a(href="page.html")  Сертификация
               li
-                a(href="#")  Разработка технической документации
+                a(href="page.html")  Разработка технической документации
               li
-                a(href="#")  Роспотребнадзор
+                a(href="page.html")  Роспотребнадзор
           +e.LI.item
             a(href="news.html") Новости
           +e.LI.item
