--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -45,6 +45,7 @@
 @import "partials/components/faq";
 @import "partials/components/page-reviews";
 @import "partials/components/page";
+@import "partials/components/page-404";
 
 // Components
 
