--- a/src/html/partials/components/footer.pug
+++ b/src/html/partials/components/footer.pug
@@ -31,27 +31,27 @@ include ../abstracts/bemto/bemto.pug
         +e.H2.title Новый слоган. Гип-гип ура =)
       .col-xs-12.col-md-4.col-lg-3
         +e.H3.subtitle Последние новости
-        +e.A.news(href="#") Новость 1
+        +e.A.news(href="page.html") Новость 1
         +e.P.time 25.03.2016
-        +e.A.news(href="#") Seafield logistics goes into administration
+        +e.A.news(href="page.html") Seafield logistics goes into administration
         +e.P.time 25.03.2016
       .col-xs-12.col-md-4.col-lg-3
         +e.H3.subtitle Информация
         .row
           .col-xs-6
-            +e.A.link(href="#") Главная
-            +e.A.link(href="#") Услуги
-            +e.A.link(href="#") Контакты
+            +e.A.link(href="index.html") Главная
+            +e.A.link(href="services.html") Услуги
+            +e.A.link(href="contact.html") Контакты
           .col-xs-6
-            +e.A.link(href="#") Комания
-            +e.A.link(href="#") Новости
+            +e.A.link(href="about-us.html") Компания
+            +e.A.link(href="news.html") Новости
       .col-xs-12.col-md-4.col-lg-3
         +e.H3.subtitle Контакты
         +e.P.adress Улица Лермонтова, Москва, 154234
-        +e.A.phone(href="tel:") +7 921 234-23-23
-        +e.A.mail(href="mail:") manager@gmail.com
-        +e.A.phone(href="tel:") +7 911 678-34-34
-        +e.A.mail(href="mail:") support@gmal.com
+        +e.A.phone(href="tel:89116783455") +7 921 234-23-23
+        +e.A.mail(href="mailto:support@gmal.com") manager@gmail.com
+        +e.A.phone(href="tel:89116783455") +7 911 678-34-34
+        +e.A.mail(href="mailto:support@gmal.com") support@gmal.com
   .container
     +b.footer-copyright
       +e.inner
